Fixed select button

--- a/index-results_module.html
+++ b/index-results_module.html
@@ -56,43 +56,27 @@
               <button class="tab-btn" data-period="quarterly">Quarterly</button>
               <button class="tab-btn active" data-period="yearly">Yearly</button>
               <button class="tab-btn" data-period="total">Total</button>
-              <button class="tab-btn tab-btn-custom" data-period="custom">
-                <div class="custom-dropdown">
-                  <span class="dropdown-value" id="dropdownValue">2 Years</span>
-                  <div class="dropdown-options" id="dropdownOptions">
-                    <div class="dropdown-option" data-value="2">2 Years</div>
-                    <div class="dropdown-option" data-value="3">3 Years</div>
-                    <div class="dropdown-option" data-value="4">4 Years</div>
-                    <div class="dropdown-option" data-value="5">5 Years</div>
-                    <div class="dropdown-option" data-value="6">6 Years</div>
-                    <div class="dropdown-option" data-value="7">7 Years</div>
-                    <div class="dropdown-option" data-value="8">8 Years</div>
-                    <div class="dropdown-option" data-value="9">9 Years</div>
-                    <div class="dropdown-option" data-value="10">10 Years</div>
-                    <div class="dropdown-option" data-value="11">11 Years</div>
-                    <div class="dropdown-option" data-value="12">12 Years</div>
-                    <div class="dropdown-option" data-value="13">13 Years</div>
-                    <div class="dropdown-option" data-value="14">14 Years</div>
-                    <div class="dropdown-option" data-value="15">15 Years</div>
-                    <div class="dropdown-option" data-value="16">16 Years</div>
-                    <div class="dropdown-option" data-value="17">17 Years</div>
-                    <div class="dropdown-option" data-value="18">18 Years</div>
-                    <div class="dropdown-option" data-value="19">19 Years</div>
-                    <div class="dropdown-option" data-value="20">20 Years</div>
-                    <div class="dropdown-option" data-value="21">21 Years</div>
-                    <div class="dropdown-option" data-value="22">22 Years</div>
-                    <div class="dropdown-option" data-value="23">23 Years</div>
-                    <div class="dropdown-option" data-value="24">24 Years</div>
-                    <div class="dropdown-option" data-value="25">25 Years</div>
-                    <div class="dropdown-option" data-value="26">26 Years</div>
-                    <div class="dropdown-option" data-value="27">27 Years</div>
-                    <div class="dropdown-option" data-value="28">28 Years</div>
-                    <div class="dropdown-option" data-value="29">29 Years</div>
-                    <div class="dropdown-option" data-value="30">30 Years</div>
-                  </div>
-                </div>
-                <i class="fas fa-caret-down dropdown-arrow"></i>
-              </button>
+              <select class="custom-years-select" id="customYearsSelect">
+                <option value="2">2 Years</option>
+                <option value="3">3 Years</option>
+                <option value="4">4 Years</option>
+                <option value="5">5 Years</option>
+                <option value="6">6 Years</option>
+                <option value="7">7 Years</option>
+                <option value="8">8 Years</option>
+                <option value="9">9 Years</option>
+                <option value="10">10 Years</option>
+                <option value="11">11 Years</option>
+                <option value="12">12 Years</option>
+                <option value="13">13 Years</option>
+                <option value="14">14 Years</option>
+                <option value="15">15 Years</option>
+                <option value="16">16 Years</option>
+                <option value="17">17 Years</option>
+                <option value="18">18 Years</option>
+                <option value="19">19 Years</option>
+                <option value="20">20 Years</option>
+              </select>
               </div>
 
               <div class="panel-actions">
