--- a/index-results_module.html
+++ b/index-results_module.html
@@ -112,13 +112,13 @@
                       <i class="fas fa-star"></i> New Avg.
                     </th>
                     <th class="col-growth">
-                      <i class="fas fa-chart-simple"></i> Growth
+                      <i class="fas fa-arrow-up"></i> Growth
                     </th>
                     <th class="col-revenue">
                       <i class="fas fa-dollar-sign"></i> Avg. Revenue / N.P.
                     </th>
                     <th class="col-growth-total">
-                      <i class="fas fa-chart-bar"></i> Growth Total
+                      <i class="fas fa-chart-simple"></i> Growth Total
                     </th>
                   </tr>
                 </thead>
